Add overview speedrun to the DORA category page

--- a/source/direction/plan/dora_metrics/index.html.md.erb
+++ b/source/direction/plan/dora_metrics/index.html.md.erb
@@ -49,7 +49,9 @@ For DORA Metrics, we are targeting the following personas (in priority order):
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wQU-mWvNSiI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-- [Support 4 DORA metrics in GitLab](https://docs.gitlab.com/ee/user/analytics/#supported-dora-metrics-in-gitlab)
+- [Support 4 DORA metrics in GitLab](https://docs.gitlab.com/ee/user/analytics/#supported-dora-metrics-in-gitlab):
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_EKW0eg3n4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### What's next and why
 
