--- a/source/direction/plan/dora_metrics/templates/_overview.erb
+++ b/source/direction/plan/dora_metrics/templates/_overview.erb
@@ -12,4 +12,6 @@ These four "DORA" metrics are:
 
 DORA metrics are available in GitLab Group-level [value stream analytics (VSA)](Group-level value stream analytics (VSA)), [Insights reports](https://docs.gitlab.com/ee/user/project/insights/#dora-query-parameters) and in the [CI/CD analytics reports](https://docs.gitlab.com/ee/user/analytics/ci_cd_analytics.html#view-deployment-frequency-chart). APIs are also available for all four DORA metrics. 
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1BrcMV6rCDw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 To learn more check out the [DORA documentation](https://docs.gitlab.com/ee/user/analytics/#devops-research-and-assessment-dora-key-metrics).
