Fixed typo in heading and changed spacing in Web IDE for consistency

--- a/sites/uncategorized/source/community/contribute/development/index.html.haml
+++ b/sites/uncategorized/source/community/contribute/development/index.html.haml
@@ -33,7 +33,7 @@ extra_js:
 
       .block
         .block-content
-          %h2#setup-the-development-enviroment.block-title Setting up the Development Enviroment
+          %h2#setup-the-development-enviroment.block-title Setting up the Development Environment
           :markdown
             1. Create a public [fork](https://docs.gitlab.com/ee/user/project/repository/forking_workflow.html#creating-a-fork) of any of the [GitLab projects you would like to contribute to](https://gitlab.com/gitlab-org). 
             1. Some GitLab projects have a detailed contributing guide located in the README or CONTRIBUTING files in the repo. Reviewing these files before setting up your development environment will help ensure you get off to a good start.
@@ -41,7 +41,7 @@ extra_js:
                 - Download and set up the [GitLab Development Kit](https://gitlab.com/gitlab-org/gitlab-development-kit), see the [GDK README](https://gitlab.com/gitlab-org/gitlab-development-kit/blob/main/README.md) for instructions on setting it up and [Troubleshooting](https://gitlab.com/gitlab-org/gitlab-development-kit/-/blob/main/doc/troubleshooting.md) if you get stuck. Alternatively, you can use [GDK with Gitpod](https://gitlab.com/gitlab-org/gitlab-development-kit/-/blob/main/doc/howto/gitpod.md) to run a pre-configured GDK instance in the cloud.
                     - GDK is heavy. If you need to build something fast, by trial and error, you can consider doing so with an empty rails app and port it to GDK after.
                 - Use [Gitpod](https://docs.gitlab.com/ee/integration/gitpod.html) by selecting the caret (angle-down) next to Web IDE, and selecting Gitpod from the list when you are at the projects repo.
-            1. If you want to contribute to the [website](https://about.gitlab.com/) or the [handbook](https://about.gitlab.com/handbook/), you can do it through the [WebIDE](https://docs.gitlab.com/ee/user/project/web_ide/) by clicking "Edit in Web IDE" located in the footer of the page you wish to edit. 
+            1. If you want to contribute to the [website](https://about.gitlab.com/) or the [handbook](https://about.gitlab.com/handbook/), you can do it through the [Web IDE](https://docs.gitlab.com/ee/user/project/web_ide/) by clicking "Edit in Web IDE" located in the footer of the page you wish to edit. 
             1. More detailed information on how to contribute to GitLab and related projects can be [found in our docs](https://docs.gitlab.com/ee/development/). 
 
       .block
