--- a/sites/handbook/source/handbook/engineering/development/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/index.html.md.erb
@@ -519,9 +519,9 @@ Some areas have already been identified that meet the definition above, and may 
 | Database migrations, tooling, complex queries, metrics | impact to entire application<br/><br/>The database is a critical component where any severe degradation or outage leads to an S1 incident. | [Documentation](https://docs.gitlab.com/ee/development/database_review.html#general-process) |
 | Sidekiq changes (adding or removing workers, renaming queues, changing arguments, changing profile of work required)  | impact to multiple services<br/><br/>Sidekiq shards run groups of workers based on their profile of work, eg memory-bound. If a worker fails poorly, it has the potential to halt all work on that shard. | [Documentation](https://docs.gitlab.com/ee/development/sidekiq_style_guide.html#sidekiq-compatibility-across-updates) |
 | Redis changes    | impact to multiple services<br/><br/>Redis instances are responsible for sets of data that are not grouped by feature category. If one set of data is misconfigured, that Redis instance may fail.  |                            |
-| Protected Branches, CODEOWNERS, MR Approvals, Gitaly interface | high percentage of traffic share |       |
 | Package product areas            | high percentage of traffic share |       |
 | Gitaly product areas             | high percentage of traffic share |       |
+| [Create: Source Code product areas](/handbook/product/categories/features/#createsource-code-group) | high percentage of traffic share. Special attention should be paid to Protected Branches, CODEOWNERS, MR Approvals, Git LFS, Workhorse and the git over SSH / gitlab-sshd interfaces. Please contact the EM (@sean_carroll) or PM (@tlinz) if you are unsure. |
 | Pipeline Execution product areas | high percentage of traffic share  | [Documentation](https://docs.gitlab.com/ee/development/contributing/verify/) |
 | Authentication and Authorization product areas    | touch multiple areas of the application    | [Documentation](/handbook/engineering/development/dev/manage/authentication-and-authorization#code-review) |
 | Workspace product areas | touch multiple areas of the application    |      |
