Move Compliance to Govern stage

--- a/sites/handbook/source/handbook/engineering/development/sec/govern/compliance/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/compliance/index.html.md.erb
@@ -23,54 +23,54 @@ title: "Compliance Group"
   * Govern:Compliance [#g_govern_compliance_daily](https://gitlab.slack.com/archives/C013E163FD0)
 
 ### Code Review
-<%= partial("handbook/engineering/development/dev/manage/compliance/code_review.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/code_review.erb") %>
 
 ### Proof-of-concept MRs
-<%= partial("handbook/engineering/development/dev/manage/compliance/pocs.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/pocs.erb") %>
 
 ### Working on unscheduled issues
-<%= partial("handbook/engineering/development/dev/manage/compliance/unscheduled_issues.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/unscheduled_issues.erb") %>
 
 
 ## Milestone Planning
 We plan in monthly cycles in accordance with our [Product Development Timeline](/handbook/engineering/workflow/#product-development-timeline). Our typical planning cycle is suggested to look like:
 
 ### Pre-planning
-<%= partial("handbook/engineering/development/dev/manage/compliance/pre_planning.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/pre_planning.erb") %>
 
 ### Planning
-<%= partial("handbook/engineering/development/dev/manage/compliance/planning.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/planning.erb") %>
 
 ### Issue Prioritization
-<%= partial("handbook/engineering/development/dev/manage/compliance/prioritization.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/prioritization.erb") %>
 
 ## During Milestone
-<%= partial("handbook/engineering/development/dev/manage/compliance/release.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/release.erb") %>
 
 ### Development Flow
-<%= partial("handbook/engineering/development/dev/manage/compliance/development_flow.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/development_flow.erb") %>
 
 ### Discovery/Refinement
-<%= partial("handbook/engineering/development/dev/manage/compliance/refinement.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/refinement.erb") %>
 
 #### Backlog
-<%= partial("handbook/engineering/development/dev/manage/compliance/backlog.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/backlog.erb") %>
 
 #### Estimation
-<%= partial("handbook/engineering/development/dev/manage/compliance/estimation.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/estimation.erb") %>
 
 #### Implmentation Plan
-<%= partial("handbook/engineering/development/dev/manage/compliance/plan.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/plan.erb") %>
 
 #### Breaking down or promoting issues
-<%= partial("handbook/engineering/development/dev/manage/compliance/promote_issues.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/promote_issues.erb") %>
 
 ### Release posts
-<%= partial("handbook/engineering/development/dev/manage/compliance/release_posts.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/release_posts.erb") %>
 
 
 ## Meetings
-<%= partial("handbook/engineering/development/dev/manage/compliance/meetings.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/compliance/meetings.erb") %>
 
 
 ## Group Members
@@ -89,10 +89,11 @@ The following people are permanent members of the group:
 ## Links and resources
 {: #links}
 
-<%= partial("handbook/engineering/development/dev/manage/shared_links.erb") %>
+<%= partial("handbook/engineering/development/sec/govern/shared_links.erb") %>
 * [Milestone retrospectives](https://gitlab.com/gl-retrospectives/govern-sub-department/compliance/-/issues)
 * Our Slack channels
   * Govern:Compliance [#g_govern_compliance](https://gitlab.slack.com/messages/CN7C8029H)
   * Daily standups [#g_govern_compliance_standup](https://gitlab.slack.com/archives/C013E163FD0)
 * Issue boards
-  * Compliance [build board](https://gitlab.com/groups/gitlab-org/-/boards/1305010) and [planning board](https://gitlab.com/groups/gitlab-org/-/boards/4657720)
+  * [Build board](https://gitlab.com/groups/gitlab-org/-/boards/1305010)
+  * [Planning board](https://gitlab.com/groups/gitlab-org/-/boards/4657720)
