--- a/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
@@ -21,7 +21,7 @@ The following teams comprise the sub-department:
 - Govern stage - [handbook](/handbook/engineering/development/sec/govern/)
   - Security Policies group - [handbook](/handbook/engineering/development/sec/govern/security-policies/)
   - Threat Insights group - [handbook](/handbook/engineering/development/sec/govern/threat-insights/)
-  - Compliance group - [handbook](/handbook/engineering/development/dev/manage/compliance/)
+  - Compliance group - [handbook](govern/compliance/)
 - Secure stage - [handbook](/handbook/engineering/development/sec/secure/)
   - Composition Analysis group - [handbook](/handbook/engineering/development/sec/secure/composition-analysis/)
   - Dynamic Analysis group - [handbook](/handbook/engineering/development/sec/secure/dynamic-analysis/)
