--- a/sites/handbook/source/handbook/engineering/metrics/sec/govern/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/metrics/sec/govern/index.html.md.erb
@@ -11,6 +11,7 @@ title: "Govern Stage Engineering Metrics"
 
 ### Group Pages
 * [Security Policies Group Dashboards](/handbook/engineering/metrics/sec/govern/security-policies)
+* [Compliance Group Dashboards](/handbook/engineering/metrics/sec/govern/compliance)
 
 <%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "Govern" } %>
 
