--- a/sites/handbook/source/handbook/engineering/development/sec/govern/_shared_links.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/_shared_links.erb
@@ -3,3 +3,5 @@
   * General Slack [#s_govern](https://app.slack.com/client/T02592416/CFHGVJ06R)
   * Social channel [#sec-section-social](https://app.slack.com/client/T02592416/C01ACJRU5PH)
   * Engineering Slack [#sd_govern_engineering](https://app.slack.com/client/T02592416/C040C6LNANB)
+  * Frontend Slack [#sd_govern_frontend](https://app.slack.com/client/T02592416/C049CE0ML84)
+  * Backend Slack [#sd_govern_backend](https://app.slack.com/client/T02592416/C048VDW68CX)
