Update career development matrix for contributor success

--- a/sites/handbook/source/handbook/engineering/career-development/matrix/engineering/quality/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/career-development/matrix/engineering/quality/index.html.md.erb
@@ -47,8 +47,8 @@ These are the expected competencies of the Quality Backend Engineer, Engineering
 
 ### Fullstack Engineer, Contributor Success
 
-These are the expected competencies of the Quality Fullstack Engineer, Contributor Success role by career level.
+These are the expected competencies of the Fullstack Engineer, Contributor Success role by career level.
 
-1. [Intermediate](job-families/engineering/quality/contributor-success/fullstack-engineer/#contributor-success-fullstack-engineer)
-1. [Senior](job-families/engineering/quality/contributor-success/fullstack-engineer/#senior-contributor-success-fullstack-engineer)
-1. [Staff](job-families/engineering/quality/contributor-success/fullstack-engineer/#staff-contributor-success-fullstack-engineer)
+1. [Intermediate](/handbook/engineering/career-development/matrix/engineering/quality/contributor-success/intermediate/)
+1. [Senior](/handbook/engineering/career-development/matrix/engineering/quality/contributor-success/senior/)
+1. [Staff](/handbook/engineering/career-development/matrix/engineering/quality/contributor-success/staff/)
