--- a/source/direction/geo/disaster_recovery/index.html.md.erb
+++ b/source/direction/geo/disaster_recovery/index.html.md.erb
@@ -10,62 +10,47 @@ canonical_path: "/direction/geo/disaster_recovery/"
 
 ## 🚨 Disaster Recovery
 
-**Last updated**: 2021-07-05
+|Section | Group | Maturity | Last updated|
+|--------|-------|------|------|
+|[Enablement](https://about.gitlab.com/direction/enablement/) | [Geo](https://about.gitlab.com/direction/geo/)|  [<%= data.categories["geo_replication"].maturity.capitalize %>](/direction/maturity/)  | 2022-11-05   |
 
-### Introduction and how you can help
 Thanks for visiting this category strategy page for GitLab Geo Disaster Recovery. This page belongs to the [Geo group](https://about.gitlab.com/handbook/product/categories/#geo-group).
+
+### Overview
+
+Disaster Recovery helps our customers fulfill their business continuity plans by creating processes that allow the recovery of a GitLab instance following a natural or human-created disaster in the data center the GitLab instance is operating in.
+
+Disaster Recovery provides an easily configurable warm standby (Geo site) in an additional region, which can quickly take over in the event of an issue with the primary.
+
+Setting up a Disaster Recovery solution for GitLab requires significant investment and is cumbersome in more complex setups. [Geo replicates around 95% of GitLab's data](https://docs.gitlab.com/ee/administration/geo/replication/datatypes.html#limitations-on-replicationverification), which means that systems administrators need to be aware of what is automatically covered and what parts need to be backed up separately, for example via `rsync`. Geo provides documentation for [planned and unplanned failover processes](https://docs.gitlab.com/ee/administration/geo/disaster_recovery/planned_failover.html).
+
+#### How you can help
 
 Please reach out to Sampath Ranasinghe, Product Manager for the Geo group ([Email](mailto:sranasinghe@gitlab.com)) if you'd like to provide feedback or ask any questions related to this product category.
 
 This strategy is a work in progress, and everyone can contribute. Please comment and contribute in the linked [issues](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=Category%3ADisaster%20Recovery) and [epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=Category%3ADisaster%20Recovery) on this page. Sharing your feedback directly on GitLab.com is the best way to contribute to our strategy and vision.
 
-Useful resources 
+#### Useful resources
+
 - [Roadmap for Disaster Recovery](https://gitlab.com/groups/gitlab-org/-/roadmap?state=all&sort=start_date_asc&layout=MONTHS&timeframe_range_type=CURRENT_YEAR&label_name%5B%5D=group%3A%3Ageo&label_name%5B%5D=Category%3ADisaster+Recovery&progress=COUNT&show_progress=true&show_milestones=false&milestones_type=ALL)
 - [Maturity: <%= data.categories["disaster_recovery"].maturity.capitalize %>](/direction/maturity/)
 - [Documentation](https://docs.gitlab.com/ee/administration/geo/disaster_recovery/)
 - [Lovable Maturity epic](https://gitlab.com/groups/gitlab-org/-/epics/4988)
 - [All Epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=Category%3ADisaster%20Recovery)
 
-### Overview
-
-⚠️ Currently, there are [some limitations](https://docs.gitlab.com/ee/administration/geo/index.html#limitations) of what data is replicated. Please make sure to check the documentation!
-{: .alert .alert-warning}
-
-Disaster Recovery helps our customers fulfill their business continuity plans by creating processes that allow the recovery of a GitLab instance following a natural or human-created disaster in the data center the GitLab instance is operating in. 
-
-Disaster Recovery provides an easily configurable warm standby (Geo site) in an additional region, which can quickly take over in the event of an issue with the primary. 
-
-Setting up a Disaster Recovery solution for GitLab requires significant
-investment and is cumbersome in more complex setups. [Geo replicates around 90% of GitLab's data](https://docs.gitlab.com/ee/administration/geo/replication/datatypes.html#limitations-on-replicationverification), which means that systems administrators
-need to be aware of what is automatically covered and what parts need to be backed up separately, for example via `rsync`. Geo provides documentation for [planned and unplanned failover processes](https://docs.gitlab.com/ee/administration/geo/disaster_recovery/planned_failover.html).
-
 ### Vision
 
 We envision the GitLab Disaster recovery solution to be semi-autonomous, detecting fault conditions and failing over automatically to a suitable secondary site. The failover will be seamless and transparent to end users.
 
-In the future, our users should be able to:
+The solution will support all current and future GitLab [reference architectures](https://docs.gitlab.com/ee/administration/reference_architectures/).
 
-- Use a GitLab Disaster Recovery solution that fits their business continuity plan.
-- Configure GitLab's DR solution to meet their Recovery Time Objective (RTO) and Recovery Point Objective (RPO)
-- Confidently set up a DR solution for up to 50k users following our reference architectures.
-- Trigger a failover to recover a working GitLab installation with a single instruction or click of a button on the UI even on multi-node architectures.
-- Confidently and regularly test failovers with minimal interruption to end-users.
-- Automatically detect certain fault conditions and failover to the most suitable secondary site with minimal user intervention.
+GitLab customers will be able to scale and tailor the Disaster Recovery solution to best fit their business continuity plans. They will be able to configure the disaster recovery solution to meet a defined Recovery Time Objective (RTO) and Recovery Point Objective (RPO).
 
-GitLab's Disaster Recovery processes and solution should:
+We will [replicate and verify 100%](#improved-data-verification) of GitLab data, giving customers the confidence to perform routine failovers without fear of data loss and interruption to end-users. Further, the failover process will be [simple and easy to trigger](#simplifying-promotion-of-secondary-sites) with a single instruction or click of a button on the UI even on multi-node architectures.
 
-- Cover different scenarios based on acceptable Recovery Time Objective (RTO)
-  and Recovery Point Objective (RPO). There is always a trade off between the
-  complexity of the system needed given the requirements in a disaster recovery.
-  GitLab's DR strategies should make this explicit to users.
-- Support all [reference architectures](https://docs.gitlab.com/ee/administration/reference_architectures/) from small installations with hundreds of users to extremely large installations with millions of users.
-- Allow the [recovery of *all* customer relevant data](#improved-data-verification) that was available on the production instance. Users should not need to consider caveats or exclusions.
-- Have a [central console from which to initiate and manage the failover](#simplifying-promotion-of-secondary-sites) for both single node and multi-node architectures.
-- Be complemented by monitoring that can detect a potential fault conditions or degradation in performance on the primary site.
-- Be [actively used on GitLab Dedicated](#available-to-gitLab-dedicated-customers) and [GitLab.com](#enable-geo-on-gitLabcom-for-disaster-recovery) to ensure that all best practices are followed and to ensure that we dogfood our own solutions.
-- Have [end-to-end observability](#improve-observability) of the replication process for each site via the UI with capabilities to troubleshoot and remediate failures. Empower the systems administrator to detect and resolve replication issues ensuring minimizing risk of data loss and guranteeing a successful recovery.
+[GitLab Dedicated and GitLab.com will actively use our Disaster Recovery solution](#enable-geo-on-gitlabcom-for-disaster-recovery) to ensure that all best practices are followed and that we dog food our own solutions.
 
-
+Given the criticality of the replication process to recovering from a failover event, we will have [end-to-end observability](#improve-observability) of the process for each site. Alarms and notifications will inform systems administrators about faults or degradation of performance. We aim to empower systems administrators to troubleshoot and remediate failures using guided instructions, helpful error logs and other tools. Systems administrators should be able to resolve replication issues quickly, minimizing the risk of data loss and guaranteeing a successful recovery.
 
 ### Target audience and experience
 
