--- a/source/direction/geo/index.html.md.erb
+++ b/source/direction/geo/index.html.md.erb
@@ -9,7 +9,7 @@ canonical_path: "/direction/geo/"
 {:toc}
 
  
-Last updated: 2021-07-05
+Last updated: 2022-11-05
 
 ## Overview
 
@@ -21,13 +21,16 @@ This architecture addresses a number of customer problems that includes proximit
 
 The Geo group is responsible for three distinct product categories:
 
-- [Geo replication](/direction/geo/geo_replication/)
-  Help remote teams work more effectively with faster access to GitLab data by serving data from Geo sites closer in proximity to their geographic location. This solution is built on top of the Geo replication and verification framework to replicate data to the remote sites.
+- **[Geo replication](/direction/geo/geo_replication/) - ([Maturity: <%= data.categories["geo_replication"].maturity.capitalize %>](/direction/maturity/))**
 
-- [Disaster Recovery](/direction/geo/disaster_recovery/)
+  Help remote teams work more effectively with faster access to GitLab data by serving data from Geo sites closer in proximity to their geographic location. This solution is built on top of the Geo replication and verification framework to replicate data to the remote sites.
+  
+- **[Disaster Recovery](/direction/geo/disaster_recovery) - ([Maturity: <%= data.categories["disaster_recovery"].maturity.capitalize %>](/direction/maturity/))**
+
   Replicate all critical GitLab data to a secondary site that can be promoted to an active instance in the event of a natural or human-caused disaster. This solution is built on top of the Geo replication and verification framework to replicate data to the secondary disaster recovery site.
 
-- [Backup and Restore](/direction/geo/backup_restore/)
+- **[Backup and Restore](/direction/geo/backup_restore/) - ([Maturity: <%= data.categories["backup_restore"].maturity.capitalize %>](/direction/maturity/))**
+
   Backup and restore all critical GitLab data.
 
 If you'd like to discuss this strategy directly with the product manager for
