Link container registry project documentation in group page

--- a/sites/handbook/source/handbook/engineering/development/ops/package/container-registry/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/container-registry/index.html.md.erb
@@ -25,3 +25,7 @@ The following people are permanent members of the Container Registry Group:
 The following members of other functional teams are our stable counterparts:
 
 <%= stable_counterparts(role_regexp: /[,&] Package/, manager_slug: 'michelletorres') %>
+
+### Documentation
+
+Project documentation is available [here](/product/container-registry/).
