--- a/sites/uncategorized/source/blog/blog-posts/2022-08-30-the-ultimate-guide-to-software-supply-chain-security.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-08-30-the-ultimate-guide-to-software-supply-chain-security.html.md.erb
@@ -35,7 +35,7 @@ Learn more about the key trends driving software supply chain security:
 
 ## Integrating sec into DevSecOps
 
-The first step in securing the software supply chain is to create a cohesive DevSecOps approach to software development. In doing so, organizations can expand security in DevOps beyond basic tasks.
+The first step in securing the software supply chain is to create a cohesive DevSecOps approach to software development. In doing so, organizations can expand security in DevOps beyond basic tasks and better [understand myriad threat vectors](/blog/2022/11/07/top-challenges-to-securing-the-software-supply-chain/).
 
 _[Security in the modern DevOps solution](/blog/2021/07/20/are-you-ready-for-the-newest-era-of-devsecops/) goes beyond just shifting security features left to empower the developers to find and fix security flaws, but also provides end-to-end visibility and control over the entire SDLC to create, deliver, and run the applications._
 
