Update NYPFL employee rights and responsibilities information

--- a/sites/handbook/source/handbook/people-policies/leave-of-absence/us/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-policies/leave-of-absence/us/index.html.md.erb
@@ -182,6 +182,67 @@ The Company takes its CFRA leave obligations very seriously and will not interfe
 
 Team members should contact leaves@gitlab.com as to any CFRA questions they may have.
 
+### New York Paid Family Leave (NYPFL)
+
+**Paid Family Leave Overview**
+New York Paid Family Leave provides job-protected, paid time off so you can:
+    * Bond with a newly born, adopted or fostered child,
+	* Care for a close relative with a serious health condition, or
+	* Assist with family situations when a family member is deployed abroad on active military service.
+Paid Family Leave may also be available for use in situations when you or your minor dependent child are under an order of quarantine or isolation due to COVID-19. See PaidFamilyLeave.ny.gov/COVID19 for full details.
+
+**Benefits**
+Eligible employees may take up to 12 weeks of leave. This leave can be taken either all at once or intermittently, but must be taken in full-day increments. You may take the maximum time-off benefit in any given 52-week period.
+
+**Pay**
+Paid Family Leave benefits provide 67% of your average weekly wage, capped at the same percentage of the New York State Average Weekly Wage. Visit PaidFamilyLeave.ny.gov for information on this year’s maximum weekly benefit, as well as a calculator to estimate your own benefits.
+    * EXAMPLE: An employee who earns $1,000 a week would receive a benefit of $670 a week.
+
+**Eligibility**
+All eligible employees are entitled to participate in Paid Family Leave. Employees are eligible regardless of citizenship and/or immigration status.
+	* Full-time employees: Employees who work a regular schedule of 20 or more hours per week are eligible after 26 consecutive weeks of employment.
+	* Part-time employees: Employees who work a regular schedule of less than 20 hours per week are eligible after working 175 days, which do not need to be consecutive.
+
+**Funding**
+Paid Family Leave is funded through employee payroll contributions that are set each year to match the cost of coverage. The rate of employee contributions is reviewed annually, and is subject to change by the New York State Department of Financial Services. Visit PaidFamilyLeave.ny.gov for information on this year’s employee contribution rate, as well as a calculator to estimate your own payroll contributions.
+
+**Qualifying Events**
+**New Child:** You can take Paid Family Leave during the first 12 months following the birth, adoption, or fostering of a child. Expectant mothers cannot take Paid Family Leave for their own pregnancy. Paid Family Leave for the birth of a child begins after the birth. It is not available for prenatal conditions.
+
+**Serious Illness:** You can take Paid Family leave to care for a family member with a serious health condition. These relatives can live outside of New York State and even outside the country. You cannot take Paid Family Leave for your own health condition.
+A serious health condition is an illness, injury, impairment, or physical or mental condition that involves:
+	* Inpatient care in a hospital, hospice, or residential health care facility, or
+	* Continuing treatment or continuing supervision by a health care provider
+
+A family member includes:  Spouse, Domestic Partner, child and stepchild, Parent and stepparent, Parent-in-law, Grandparent, Grandchild, and effective 2023 Sibling (biological, adopted, half, and step).
+
+**Military Active Service Deployment:** You can take Paid Family Leave to assist with family situations arising when your spouse, domestic partner, child, or parent is deployed abroad on active military service or has been notified of an impending military deployment abroad. You cannot use Paid Family Leave for your own qualifying military event.
+
+**COVID-19 Quarantine:** Paid Family Leave may also be available for use in situations when you or your minor dependent child are under an order of quarantine or isolation due to COVID-19. See PaidFamilyLeave.ny.gov/COVID19 for full details.
+
+**Your Rights and Protections**
+    * You have job protection, ensuring you can return to the same job (or a comparable one) when you return from Paid Family Leave.
+    * You can keep your health insurance while on leave. If you contribute to the cost of your health insurance, you must continue to pay your portion of the premium cost while on leave.
+    * Your employer is prohibited from discriminating or retaliating against you for requesting or taking Paid Family Leave.
+
+**Taking Paid Family Leave**
+1. Notify your employer. When you want to take Paid Family Leave, you must notify your employer at least 30 days before your leave will start if it’s foreseeable. Otherwise, notify your employer as soon as possible.
+2. Obtain required forms. Contact your employer, employer’s insurance carrier, or visit PaidFamilyLeave.ny.gov to obtain the required forms.
+3. Complete and attach: The Request For Paid Family Leave (Form PFL-1) has sections that need to be completed by you and by your employer. Fill out your section, make a copy and give the form to your employer to fill out Part B. Your employer is required to return Form PFL-1 to you within three business days. If there is a delay, you do not have to wait to proceed. Send the Form PFL-1 that you have filled out, along with the rest of your request package, directly to your employer’s insurance carrier.
+4. Obtain and attach supporting documentation. The specific documentation or additional forms required for each type of leave are described on the request for Paid Family Leave and at PaidFamilyLeave.ny.gov/Apply.
+5. Submit your request forms and supporting documentation. You must submit your completed request package to your employer’s insurance carrier within 30 days after the start of your leave to avoid losing benefits. In most cases, the insurance carrier must pay or deny benefits within 18 calendar days of receiving your completed request or your first day of leave, whichever is later.
+
+**Paid Family Leave Process and Contacts**
+At GitLab, requests for Paid Family Leave forms and forms submissions should be directed to the Absence Management Team (leaves@gitlab.com).  Our Paid Family Leave carrier is Cigna as a subsidiary of NYLife.
+
+**Disputes**
+If your Paid Family Leave claim is denied, the insurance carrier will provide you with information about how to request arbitration. A neutral arbitrator will decide claim-related disputes. Contact Cigna a subsidiary of NYLife.
+
+**Discrimination Complaints**
+Employees are protected from discrimination and retaliation for requesting or taking Paid Family Leave. If your employer terminates your employment, reduces your pay and/or benefits, or disciplines you in any way as a result of you requesting or taking Paid Family Leave, send your employer’s designated Paid Family Leave contact a formal request for job reinstatement using the Formal Request For Reinstatement Regarding Paid Family Leave (Form PFL-DC-119), which can be found in the forms section of PaidFamilyLeave.ny.gov. File the completed form with your employer and send a copy to: 
+    Paid Family Leave, P. O. Box 9030, Endicott, NY 13761-9030
+If your employer fails to comply with the request for reinstatement within 30 days, you may file a Paid Family Leave discrimination complaint with the Workers’ Compensation Board using Paid Family Leave Discrimination Complaint (Form PFL-DC-120), which is also available on the Paid Family Leave website. Once your complaint is received, the Board will assemble your case and schedule a preliminary hearing in front of a Workers’ Compensation Law Judge.
+
 ## Other Leave Types By State
 
 | Leave Type                              | State or City/Region |
