Replace "grok" with more broadly understood english

--- a/sites/uncategorized/source/company/culture/all-remote/handbook-first-documentation/index.html.md.erb
+++ b/sites/uncategorized/source/company/culture/all-remote/handbook-first-documentation/index.html.md.erb
@@ -64,7 +64,7 @@ It's difficult to rally an organization to only use Slack for [informal communic
 
 There's a very real fear that committing to a handbook, and instilling a culture of documentation, is too tall a task to actually accomplish. The goal should **not** be to complete the handbook before ever announcing its existence to the company.
 
-For established organizations, the trick is to apply [iteration](/handbook/values/#iteration) to the challenge of standing up a handbook within a company. Put the proper infrastructure in place (which we'll cover below), and begin documenting process after process, one at a time. Building a handbook well after a firm's infancy is tough, as you're changing both process and culture while operating a business at scale. However, leaders can manage expectations to make the handbook's insertion easier to grok. 
+For established organizations, the trick is to apply [iteration](/handbook/values/#iteration) to the challenge of standing up a handbook within a company. Put the proper infrastructure in place (which we'll cover below), and begin documenting process after process, one at a time. Building a handbook well after a firm's infancy is tough, as you're changing both process and culture while operating a business at scale. However, leaders can manage expectations to make the handbook's insertion easier to understand profoundly through intuition or empathy. 
 
 ## Documentation is never finished
 
