--- a/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
@@ -186,6 +186,24 @@ PMs are able to refine their plans and strategy throughout the year, but since t
 major updates to the content that happen ad-hoc should also be communicated widely - for example,
 using the Product FGC meetings or other communication channels.
 
+The direction page provides a thematic overview of the focus investment areas for the category. The "What's Next" section should cover the larger, strategic investment themes, while linking to Epics and Issues in GitLab for additional details.  The Roadmap section should outline both (1) current development focus areas and (2) exploratory/design work to inform future work. For each time block (Now/Next/Future) on your direction page, consider adding "how we are measuring success" so the reader can see progress and what the definition of success means.
+
+The structure of a roadmap on a direction page might looks something like this: 
+1. Now
+  - Prioritized development work
+  - Exploratory work 
+  - How we are measuring success 
+1. Next
+  - Prioritized development work
+  - Exploratory work 
+  - How we are measuring success 
+1. Future
+  - Prioritized development work
+  - Exploratory work 
+  - How we are measuring success 
+
+If the category has developed a [UX Roadmap](/handbook/product/ux/product-design/ux-roadmaps/) we recommend the product designer to create a merge request to incorporate UX Roadmap themes into the category direction page roadmap. Assign the MR to the PM for review and merge.
+
 #### Navigating cross-stage or cross-section direction pages 
 
 In some cases there may be direction pages that span multiple stages or sections. A direction page that summarizes the collective vision as well as all the contributors of that direction is critical to maintain transparency and adequate assignment of ownership. 
@@ -2480,7 +2498,7 @@ There are a few different tools PM's can utilize to understand the operational c
 
 You should strive to maintain an updated Epic [roadmap](https://docs.gitlab.com/ee/user/group/roadmap/)
 for your group (here's [an example](https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name%5B%5D=group%3A%3Ageo)). This can take considerable effort but doing so will ensure
-your issues are well organized according to the principals laid out below.
+your issues are well organized according to the principles laid out below.  You should also maintain a roadmap in your direction page that serves as the SSOT.  There are additional guidelines in the [Managing Your Product Direction Section](https://about.gitlab.com/handbook/product/product-processes/#managing-your-product-direction).
 
 ### Boards
 
