Add Canada Corp Intern contract

--- a/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
@@ -126,6 +126,7 @@ _All team members in New Zealand are employed by GitLab Australia PTY Ltd. This 
 - [GitLab Canada Corp - (All Provinces except for Quebec - with probationary period) No OTE](https://docs.google.com/document/d/1A6sHEU_G5IhyXPvJ9H312Dl9N2gq_cIvBZg1ngHa3G0/edit?usp=sharing)
 - [GitLab Canada Corp - (All Provinces except Quebec - with probationary period with OTE](https://docs.google.com/document/d/1k2cWsYLIZVcvUgFRi5DIrs4QVSY-ubpFV9KRN8hrCZE/edit?usp=sharing)
 - [GitLab Canada Corp - (All Provinces except Quebec) with OTE & Draw](https://docs.google.com/document/d/12V0dC8eKcIdHi2lKKf3FFIgdmb_NQy2S0N8N838UbBE/edit?usp=sharing)
+- [GitLab Canada Corp - (All Provinces except Quebec) Intern no OTE](https://docs.google.com/document/d/10_Ee-b-DxStZDbvHfZTDkaFm6pi6jQ1YnkflaW_O-yY/edit?usp=sharing)
 
 **QC with Signing Bonus**
 
