Document groups for Sec Section

--- a/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
@@ -94,6 +94,22 @@ Each group also has a calendar for team-based discussions, such as the our weekl
 
 We encourage utilizing our available [Google Groups](https://groups.google.com/my-groups) instead of including individuals as attendees when possible. Along with ensuring the event is represented on individual's calendars for visibility, new team members are automatically added to events (as well as removed when someone departs from a team).
 
+### Google Groups
+
+Google groups [were setup](https://gitlab.com/gitlab-org/secure/general/-/issues/246) and are structured as:
+  - sec-section
+  - sec-govern
+  - sec-secure
+  - sec-govern-threat-insights
+  - sec-govern-security-policies
+  - sec-govern-compliance
+  - sec-secure-static-analysis
+  - sec-secure-dynamic-analysis
+  - sec-secure-composition-analysis
+
+The members of each google group consists of stable counterparts and the correct `eng-dev-[sub-department]-[team]` group of engineers. When stable counterparts change, or team members onboard/offboard the appropriate group should be updated. 
+
+
 ## Staying Informed and Informing Team Members
 
 - [Sec Week In Review Google Document](https://drive.google.com/drive/search?q=%22Sec%20Section%20Week%20In%20Review%22) - is an asynchronous weekly document of notables things happening in Sec. The document is inspired by the [Engineering Week In Review](https://about.gitlab.com/handbook/engineering/#communication).
