Adding hiring restriction  to considerations and eligibility

--- a/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
@@ -32,7 +32,7 @@ Having team members for 6 months or more working outside of their contractual lo
 
 ### Considerations and Eligibility 
 
-1. Does GitLab have an [entity](/handbook/people-group/employment-solutions/#gitlab-entities) or use a [PEO(Professional Employment Organisation)](/handbook/people-group/employment-solutions/#peo-professional-employer-organization-employer-of-record-and-not-a-gitlab-entity) in the new place you're moving to? We are currently only supporting relocations to GitLab Entities and PEOs at this time in alignment with our [Country hiring guidelines](/handbook/people-group/employment-solutions/#country-hiring-guidelines). 
+1. Does GitLab have an [entity](/handbook/people-group/employment-solutions/#gitlab-entities) or use a [PEO(Professional Employment Organisation)](/handbook/people-group/employment-solutions/#peo-professional-employer-organization-employer-of-record-and-not-a-gitlab-entity) where there are no hiring restrictions in the new place you're moving to? We are currently only supporting relocations to GitLab Entities and PEOs at this time in alignment with our [Country hiring guidelines](/handbook/people-group/employment-solutions/#country-hiring-guidelines).
 1. Would this relocation change your "[Team Member Type](https://about.gitlab.com/handbook/people-group/employment-solutions/#team-member-types-at-gitlab)" with GitLab? Are you comfortable with this possible change?
 1. Have you considered any changes to [benefits](https://about.gitlab.com/handbook/total-rewards/benefits/general-and-entity-benefits/)
 1. Do you have the appropriate right to work documentation/visa requirements in the country that you are considering relocating to?
