--- a/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
@@ -6,9 +6,11 @@ categories: security
 tags: security, compliance, inside GitLab
 description: With phishing attacks on the rise across the industry, we had to
   quickly elevate our security posture even higher. This is what we did.
+image_title: '/images/blogimages/webauthn.jpg'
 twitter_text: We had a plan to elevate our security posture. Then our risk for
   phishing attacks increased so we stepped on the gas and raised WebAuthn
   adoption from 1/5 of our workforce to more than 90% in just two days. Here's
   how.
+featured: yes
 ---
-x﻿xx
+xxx
