--- a/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: How we boosted WebAuthn adoption from 20 percent to 93 percent in 2 days
+title: How we boosted WebAuthn adoption from 20 percent to 93 percent in two days
 author: Eric Rubin
 author_gitlab: ericrubin
 categories: security
