--- a/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-08-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
@@ -4,7 +4,7 @@ author: Eric Rubin
 author_gitlab: ericrubin
 categories: security
 tags: security, compliance, inside GitLab
-description: With phishing attacks on the rise across the industry, we had to
+description: With phishing campaigns on the rise across the industry, we had to
   quickly elevate our security posture even higher. This is what we did.
 image_title: '/images/blogimages/webauthn.jpg'
 twitter_text: We had a plan to elevate our security posture. Then our risk for
